--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "cuery",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/server.ts",
+    "dev": "nodemon --watch src --exec ts-node src/app.ts",
     "build": "tsc",
-    "postbuild": "cp src/docs/api.yaml ./dist/docs/api.yaml",
-    "start": "npm run build && node dist/server.js",
-    "format": "prettier --write ."
+    "postbuild": "mkdir -p ./dist/docs && cp src/docs/api.yaml ./dist/docs/api.yaml",
+    "start": "npm run build && node dist/app.js",
+    "format": "prettier --write .",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +29,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/winston": "^2.4.4",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
